--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install TensorFlow"
+    "!pip install TensorFlowsadsadsadsadsad"
    ]
   },
   {
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install tensorflow[and-cuda]"
+    "!pip install tensorflow[and-cuda]asdsadsad"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "from transformers import pipeline\n",
-    "import torch"
+    "import torchasdsadsad"
    ]
   },
   {
